@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_conference/asterisk-app_conference-0.0.1_pre20050506.ebuild,v 1.2 2005/07/08 20:41:54 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_conference/asterisk-app_conference-0.0.1_pre20050506.ebuild,v 1.3 2005/08/27 20:19:34 stkn Exp $
 
 inherit eutils
 
@@ -19,7 +19,8 @@ IUSE=""
 
 # depends on glibc's iconv support
 DEPEND="sys-libs/glibc
-	>=net-misc/asterisk-1.0.5-r1"
+	>=net-misc/asterisk-1.0.5-r1
+	!>=net-misc/asterisk-1.1.0"
 
 S=${WORKDIR}/${MY_PN}
 
