@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/asterisk-app_conference
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_conference/ChangeLog,v 1.2 2005/07/08 20:41:54 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_conference/ChangeLog,v 1.3 2005/08/27 20:19:34 stkn Exp $
+
+  27 Aug 2005; <stkn@gentoo.org>
+  asterisk-app_conference-0.0.1_pre20050506.ebuild:
+  Added blocker for >=1.1.0 (does not work with 1.2.0
+  at the moment).
 
   08 Jul 2005; David Holm <dholm@gentoo.org>
   asterisk-app_conference-0.0.1_pre20050506.ebuild:
